Cleaned up WebBrowser class so that it readable again.